[package]
name = "rust_dash_map"
version = "0.1.0"
edition = "2023"

[lib]
name = "rust_dash_map"
crate-type = ["cdylib"]

[dependencies]
dashmap = { version = "5.4.0", features = ["rayon"] }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde = "1.0"
bincode = "1.3"
rayon = "*"

[build-dependencies] 
maturin = "0.14"
